*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/swig/code/branches/rel-1-3@4110 d7a574c2-d0a9-4346-9435-0907474fee8b

--- a/SWIG/TODO
+++ b/SWIG/TODO
@@ -339,6 +339,8 @@ Guile
 **     Maybe communicate the type system between object modules via Scheme
        variables, rather than a shared object.
 
+**     Provide a clean way to construct type predicates.
+
 Mzscheme
 --------
 
