Added my name as maintainer for Chicken, and put "Chicken" alongside list of other languages.
git-svn-id: svn://svn.code.sf.net/p/swig/code/branches/rel-1-3@4301 d7a574c2-d0a9-4346-9435-0907474fee8b

--- a/SWIG/README
+++ b/SWIG/README
@@ -6,7 +6,7 @@ $Header$
 
 Tagline: SWIG is a compiler that integrates C and C++ with
          languages including Perl, Python, Tcl, Guile, Mzscheme,
-         Java, Ruby, PHP, and Ocaml.
+         Java, Ruby, PHP, Ocaml and Chicken.
 
 SWIG reads annotated C/C++ header files and creates wrapper code (glue
 code) in order to make the corresponding C/C++ libraries available to
@@ -27,6 +27,7 @@ working on this are:
  Sam Liddicott (saml@liddicott.com)                     (PHP)
  Art Yerkes (ayerkes@speakeasy.net)                     (Ocaml)
  Thien-Thi Nguyen (ttn@glug.org)                        (build/test/misc)
+ Jonah Beckford (beckford@usermail.com)                 (Chicken)
 
 Major contributors include:
  Shibukawa Yoshiki                                      (Japanese Translation)
@@ -81,8 +82,8 @@ The most notable changes since SWIG1.1 include the following:
    - A full C preprocessor with macro expansion.
      Includes C99 variadic macro support.
 
-   - Java, Ruby, MzScheme, PHP4, OCAML, Pike, and XML modules added.
-     Guile module improved.
+   - Java, Ruby, MzScheme, PHP4, OCAML, Pike, Chicken, and XML modules
+     added.  Guile module improved.
 
    - Better code generation.   SWIG is better able to make optimizations
      in order to generate less code.
